更新Linux与微原

--- a/教程/微机原理.md
+++ b/教程/微机原理.md
@@ -46,3 +46,21 @@
   * **第二代：汇编语言，用符号编程，和具体机器指令和硬件有关**
   * **第三代：高级语言**
   * **第四代：它实际上是在高级语言的基础上集成的模块化语言，它有更强的编程功能**
+
+---
+
+## 第二讲：微型机的基本工作过程
+
+![](img/QQ截图20200304225447.jpg)
+
+
+
+---
+
+## 第三讲：计算机中的编码、数制及其转换
+
+* **任意进制转换成十进制**
+
+  方法是：按权展开后相加即可
+
+  **权：...3 2 1 0 -1 -2 -3...**
