更新微原笔记

--- a/教程/微机原理.md
+++ b/教程/微机原理.md
@@ -64,3 +64,55 @@
   方法是：按权展开后相加即可
 
   **权：...3 2 1 0 -1 -2 -3...**
+
+---
+
+## 第四讲：无符号二进制数的算术运算和逻辑运算
+
+* 布尔代数也和普通代数一样，可以写成下面的表达式
+
+  **Y = F(A、B、C、....)**
+
+* 但他有两个特点：
+
+  * **A、B、C、D只有两种可能，即0或1**
+    * **注意：布尔代数的变量只代表事物的两个不同的状态和性质。如“开”或“关”**
+  * **函数F只有三种基本运算，即“与”、“或”、“非”
+    * **注意：逻辑运算都是独立的按位进行，而和其他位的运算结果无关**
+
+1. **“或”运算：**
+
+   1. **逻辑表达式为：Y=A+B**
+   2. **上式或运算的意义是：逻辑变量A或B中，只要有一个1，则逻辑变量Y的值为1**
+   3. **全0才0，有1出1**
+
+2. **“与”运算**
+
+   1. **逻辑表达式为：Y = A · B**
+   2. **上式与运算的意义是：逻辑变量A或B中，只有都为1，则逻辑变量Y的值为1。否则Y则为零**
+   3. **全1才1，有0出0**
+
+3. **“非”运算**
+
+   1. **逻辑表达式**
+
+      <img src="img/非.jpg" style="zoom:80%;" />
+
+4. **摩根定理**
+
+   1. ![](img/摩根定理.jpg)
+   2.   **A或B的结果的非等于A的非与B的非**
+   3. **A与B的结果的非等于A的非或B的非**
+
+5. **逻辑电路**
+
+   ![](img/逻辑电路.jpg)
+
+   1. **与门电路**
+   2. **或门电路**
+   3. **非门电路**
+
+6. **真值表**
+
+   ![](img/真值表.jpg)
+
