--- a/教程/微机原理.md
+++ b/教程/微机原理.md
@@ -116,3 +116,28 @@
 
    ![](img/真值表.jpg)
 
+
+
+---
+
+## 第五讲：运算中的溢出
+
+* **溢出概念及检测方法：**
+
+  * **在计算机中，若采用定点小数，数的表示范围为|X|<1，如果出现运算结果超出数的表示范围的现象，就称为溢出**
+  * **两个正数相加，结果为负（即：大于机器所能表示的最大正数），称为上溢**
+  * **两个负数相加，结果为正（即：小于机器所能表示的最大负数），称为下溢**
+  * **运算出现溢出，结果就是错误的**
+
+* **检测方法：**
+
+  1. **双符号位法（变形补码法）**
+
+     **用两个相同的符号位表示一个数的符号，左边第一位为第一符号位，是结果的真正符号位，相邻的为第二符号位。定义双符号位的含义为：00表示正号；11表示负号；01表示产生正向溢出；10表示负向溢出**
+
+     ![](img/双符号位法.jpg)
+
+  2. **单符号位操作检测方法：**
+
+     **当操作数中的加数与被加数符号相同时，若运算结果的符号与操作数的符号不一致，表示溢出；否则，表示没有溢出。而当加数和被加数符号不同时，相加运算的结果是绝对不会溢出的**
+
