更新微原笔记

--- a/教程/微机原理.md
+++ b/教程/微机原理.md
@@ -141,3 +141,169 @@
 
      **当操作数中的加数与被加数符号相同时，若运算结果的符号与操作数的符号不一致，表示溢出；否则，表示没有溢出。而当加数和被加数符号不同时，相加运算的结果是绝对不会溢出的**
 
+
+
+---
+
+## 机器数的表示及运算
+
+* **数据和字符的机内表示**
+
+  * **数值数据的表示**
+
+  * **真值与机器数：**
+
+    * **真值：正、负符号加二进制绝对值**
+
+      **例：-0010011B、+1011001B**
+
+    * **机器数：在机器中使用的连同数符一起数码化的数**
+
+      **例：10010011B、01011001B**
+
+  * **机器数的范围：**
+
+    * **字长为8位，无符号整数的最大值是：**
+
+      **(11111111) B= (255) D**
+
+      **此时机器数的范围是0~255**
+
+    * **字长为16位，无符号整数的最大值是：**
+
+      **(1111111111111111) B = (FFFF) H =(65535) D**
+
+      **此时机器数的范围是0~65535**
+
+  * **机器数的符号：**
+
+    **在算术运算中，数据是有正有负的，将这类数据称为带符号数。**
+
+    **为了在计算机中正确地表示带符号数，通常规定每个字节的最高位为符号位，并用0表示正数，用1表示负数。**
+
+  * **机器数中小数点的位置：**
+
+    **在机器中，小数点的位置通常有两种约定：**
+
+    **一种规定小数点的位置固定不变，这时的机器数称为“定点数”**
+    
+    **另一种规定小数点的位置可以浮动，这时的机器数称为“浮点数”**
+  
+* **数值数据在机内的表示**
+
+  * **定点小数**
+
+    **定点小数 是纯小数，是将小数点固定在符号d0之后，数值最高位d1之前，这就是定点小数形式**
+
+    **其格式如下所示：**
+
+    ![](img/QQ截图20200413213647.png)
+
+  * **定点整数**
+
+    **定点整数是纯整数，是将小数点固定在数的最低位之后，这就是定点整数形式**
+
+    **其格式如下所示：**
+
+    ![](img/QQ截图20200413213938.png)
+
+  * **浮点表示法**
+
+    **浮点表示法与数学中的科学计数法相似，是指计算机中的小数点位置不是固定的，或者说是“浮动”的。对于任何一个二进制数N都可以表示为：**
+
+    ![](img/QQ截图20200413214223.png)
+
+    **式中，M称为N的尾数，是一个纯小数，E是数N阶码，是一个整数**
+
+    ![](img/QQ截图20200413214325.png)
+
+  * **计算机中机器浮点数由以下部分组成：**
+
+    ![](img/QQ截图20200413214547.png)
+
+  * **浮点数的规格化**
+
+    ![](img/QQ截图20200413214818.png)
+
+* **数的机器码表示——有符号数的表示方法**
+
+  **数有正、负之分，在计算机中，采用数的符号和数值一起编码的方法来表示数据**
+
+  **常用的表示法有：原码表示法、反码表示法、补码表示法和移码表示法**
+
+  * **原码**
+
+    **正数的符号位为0，负数的符号位为1，其他位按照一般的方法来表示数的绝对值。用这样的表示方法得到的就是数的原码**
+
+    ![](img/QQ截图20200413215505.png)
+
+    ![](img/QQ截图20200413215527.png)
+
+  * **反码**
+
+    **对于一个带符号的数来说，正数的反码与其原码相同，负数的反码为其原码除符号位以外的各位按位取反**
+
+    ![](img/QQ截图20200413221130.png)
+
+  * **补码**
+
+    **正数的补码与其原码相同，负数的补码为其反码在最低位加1**
+
+    ![](img/QQ截图20200413225708.png)
+
+  * **移码**
+
+    **移码也叫增码，它常以整数形式用在计算机浮点数的阶码（表示指数）中。若纯整数X为n位（包括符号位），则其移码定义为：**
+
+    ![](img/QQ截图20200413230115.png)
+
+    **求移码的方法：**
+
+    * **根据定义**
+
+    * **将该数补码的符号位求反即得该数的移码**
+
+      **即：移码与补码的形式相同，只是符号位相反**
+
+  * **BCD码**
+
+    **BCD码又称为“二——十进制编码”，专门解决用二进制表示十进制的问题。最常用的是8421编码，其方法是用4位二进制表示1位十进制，自左至右每一位对应的位权是8、4、2、1，如果按位权展开求和，和数就等于该数码所对应的十进制数。**
+
+    ![](img/QQ截图20200413230739.png)
+
+* **非数值数据在机内的表示**
+
+  * **字符的编码**
+
+    * **ASCLL码**
+
+      **一般采用美国标准信息交换码，它使用七位二进制编码来表示符号，通常把它称为ASCLL码。由于使用七位码来表示一个符号，故该编码方案中共有128个符号**
+
+      ![](img/QQ截图20200413231407.png)
+
+      ![](img/QQ截图20200413231453.png)
+  
+* **定点加法、减法运算**
+
+  * **补码运算的优点：可将减法运算转化为加法运算，从而简化机器内部硬件电路的结构**
+  * **补码运算的特点：符号位和数值一起参加运算，只要结果不发生溢出，得到的就是本次运算的结果**
+
+
+
+---
+
+## 基本逻辑门及常用逻辑部件
+
+* **其他的门电路**
+
+  ![](img/QQ截图20200413232731.png)
+
+  **其中缓冲器的作用是改变输出电阻，以提高带负载能力**
+
+* **真值表**
+
+  ![](img/QQ截图20200413233002.png)
+
+* **半加器与全加器**
+
+  ![](img/QQ截图20200413233201.png)
