--- a/教程/微机原理.md
+++ b/教程/微机原理.md
@@ -307,3 +307,74 @@
 * **半加器与全加器**
 
   ![](img/QQ截图20200413233201.png)
+
+
+
+---
+
+## 8086/8088CPU的内部结构和外部引线
+
+1. **CPU的功能和结构**
+
+   **当代主流计算机所遵循的仍然是冯·诺伊曼的“存储程序、程序控制”思想**
+
+   **程序告诉计算机：应该逐步执行什么操作；在什么地方找到用来操作的数据，结果存到何处等**
+
+2. **CPU的功能**
+
+   1. **指令控制**
+
+      **保证机器按程序规定的顺序取出执行**
+
+   2. **操作控制**
+
+      **CPU产生每条指令所对应的操作信号，并把各种操作信号送往相应的部件，从而控制这些部件按指令的要求进行动作**
+
+   3. **时间控制**
+
+      **对各种操作的实施时间进行定时**
+
+   4. **数据加工**
+
+      **对数据进行算术运算和逻辑运算处理**
+
+3. **CPU的基本组成**
+
+   * **以前的CPU主要由运算器和控制器两大部分组成，随着集成电路的发展，目前CPU芯片上集成了一些其他逻辑功能的部件来扩充CPU的功能，比如Cache等**
+
+   * **Cache（高速缓存存储器），是为了解决CPU和主存储器之间速度匹配的问题而设置的**
+
+   * **运算器是数据加工处理软件，所进行的全部操作由控制器发出的控制信号指挥**
+
+     1. **执行所有的算术运算**
+     2. **执行所有的逻辑运算，并进行逻辑测试**
+
+   * **控制器完成对整个计算机系统操作的协调与指挥**
+
+     1. **控制机器从内存中取出一条指令，并指出下一条指令在内存中的位置**
+     2. **对指令进行译码，并产生相应的操作控制信号，送往相应的部件，启动规定的动作**
+     3. **指挥并控制CPU、内存与输入/输出（I/O）设备之间数据的流动方向**
+
+   * **CPU的基本模型**
+
+     ![](img/QQ截图20200414231140.png)
+
+     * **数据缓存寄存器（DR）：暂时存放由内存读出或写入的指令或数据字**
+     * **指令寄存器（IR）：保存当前正在执行的一条指令**
+     * **程序计数器（PC）：确定下一条指令的地址**
+     * **地址寄存器（AR）：保存当前CPU所访问的内存单元的地址**
+     * **累加寄存器（AC）：最常使用的一个通用寄存器**
+     * **状态条件寄存器（PSW）：保存由算术和逻辑指令的结果建立的各种条件码**
+
+4. **8086CPU最小模式下的引脚信号及功能**
+
+   ![](img/QQ截图20200415003745.png)
+
+   * **数据地址引脚**
+
+     1. **地址、数据引脚线**
+
+     * **AD0~AD15（Address/Data Bus）**
+     * **分时复用的地址数据引脚线，具有双向、三态功能**
+     * **在总线周期T1期间作地址线A0~A15用，此时输出存储单元的低16位地址**
+     * **在T2~T3期间作数据线D0~D15用，是双向的。当CPU响应中断时，以及系统总线处理“保持相应”状态时，AD0~AD15都处于悬空状态**
