--- a/教程/微机原理.md
+++ b/教程/微机原理.md
@@ -378,3 +378,10 @@
      * **分时复用的地址数据引脚线，具有双向、三态功能**
      * **在总线周期T1期间作地址线A0~A15用，此时输出存储单元的低16位地址**
      * **在T2~T3期间作数据线D0~D15用，是双向的。当CPU响应中断时，以及系统总线处理“保持相应”状态时，AD0~AD15都处于悬空状态**
+     * **A19/S6~A16/S3**
+     * **地址/状态分时复用，输出引脚**
+     * **在T1期间，作地址线A19~A16，对存储单元进行读写时，高四位地址由A16~A19输出；就和A0~A15组合在一起构成20位地址总线A0~A19**
+     * **在T2~T4期间作为S3~S6状态线用**
+     * **S6状态为低电平表明8086/8088CPU正与总线相连**
+     * 
+
