--- a/教程/微机原理.md
+++ b/教程/微机原理.md
@@ -1,4 +1,4 @@
-## 第一讲：微型计算机的基本组成及各部分的功能与作用
+## su第一讲：微型计算机的基本组成及各部分的功能与作用
 
 * 数字计算机：它是一种能够存储程序，能自动连续地对各种数字化信息进行计算、逻辑运算地快速工具。在这一定义中包含两个重要的基本概念：**信息数字化，存储程序工作方式**。他们是了解计算机组成及工作机制的**基本出发点**
   
@@ -11,7 +11,7 @@
       3. 数据和指令都采用二进制代码表示，则他们在外形上并无区别都是由**0(没电)或1(有电)**组成的代码序列，只是各自约定的含义不同而已。
    
    2. 采用存储程序工作方式
-      1. 事先编制程序
+      1. 事先编制程序su
       2. 将程序存储于计算机的存储器之中
       3. 计算机在运行时将自动地连续地从存储器中依次取出指令加以执行
 
@@ -383,5 +383,137 @@
      * **在T1期间，作地址线A19~A16，对存储单元进行读写时，高四位地址由A16~A19输出；就和A0~A15组合在一起构成20位地址总线A0~A19**
      * **在T2~T4期间作为S3~S6状态线用**
      * **S6状态为低电平表明8086/8088CPU正与总线相连**
-     * 
+     * **S5状态表示当前中断状态允许标志IF的状态，如果IF=1表明当前允许可屏蔽中断请求，IF=0表明当前禁止可屏蔽中断请求**
+     * **S4和S3状态组合起来指出CPU正在使用哪一个段寄存器**
 
+     2. **读写控制引脚**
+
+     * **ALE（Address Latch Enable）**
+     * **地址锁存允许，输出、三态**
+     * **ALE引脚高电平有效**
+     * **当复用引脚AD0~AD15和A16/S3~A19/S6正在传送地址信息，CPU提供ALE有效电平，将地址信息锁存到地址锁存器中**
+     * **IO/M（Input and Output/Memory）**
+     * **该引脚输出高电平时，表示CPU将访问I/O端口，这时地址总线A0~A15提供16位I/O口地址**
+     * **该引脚输出低电平时，表示CPU将访问存储器，这时地址总线A0~A19提供20位存储器地址**
+     * **WR （Write）**
+     * **写控制，输出、三态、低电平有效**
+     * **有效时，表示CPU正在写出数据给存储器或I/O端口**
+     * **RD（Read）**
+     * **读控制，输出、三态、低电平有效**
+     * **有效时，表示CPU正在从存储器或I/O端口读入数据**
+     * **READY（ready）准备就绪信号：存储器和I/O就绪**
+     * **使CPU和低速的存储器或I/O设备之间实现速度匹配的信号**
+     * **当READY为高电平时，表示内存或I/O设备已准备就绪，可以立即进行一次数据传输**
+     * **CPU在每个总线周期的T3状态对READY引脚进行检测，若检测到READY=1,则总线周期按正常时序进行读、写操作；不需要插入等待状态Tw。若测得READY=0，则表示存储器或I/O设备工作速度慢，没有准备好数据，则CPU在T3和T4之间自动插入一个或几个等待状态Tw来延长总线周期，直叨检测到READY为高电平后，才使CPU退出等待进入T4状态，完成数据传送。**
+     * **DEN（Data Enable）**
+     * **数据允许信号，输出、三态、低电平有效**
+     * **有效时，表示当前数据总线上正在传送数据**
+     * **DT/R（Data Transmit Receive）**
+     * **数据发送/接受，控制数据传送的方向**
+     * **该信号表明当前总线上数据的流向**
+       * **高电平时数据自CPU输出（发送）**
+       * **低电平时数据输入CPU（接受）**
+
+     3. **总线请求和响应信号**
+
+     * **HOLD（Hold Request）总线保持请求信号**
+     * **HLDA（Hold Acknowledge）总线保持响应信号**
+     * **HOLD总线保持请求信号：**
+     * **最小模式系统中，除CPU（8086/8088）以外的其它总线控制器，如DMA控制器申请使用系统总线的请求信号**
+
+     4. **中断请求和响应信号**
+
+     * **中断请求和响应操作有两种类型的中断:**
+     * **非屏蔽中断和可屏蔽中断**
+
+     ![](img/QQ截图20200417005605.png)
+
+     ![](img/QQ截图20200417005811.png)
+
+     5. **其他引脚**
+
+     * **RESET**
+     * **复位请求，输入、高电平有效**
+     * **该信号有效，将使CPU回到其初始状态**
+     * **在复位状态，CPU内部的寄存器初始化**
+     * **CLK（Clock）**
+     * **时钟输入**
+     * **系统通过该引脚给CPU和总线控制提供内部定时脉冲**
+     * **8086/8088CPU的时钟一般都是由时钟发生器Intel 8284A芯片来产生的**
+     * **Vcc**
+     * **电源输入，向CPU提供+5V电源**
+     * **GND**
+     * **接地，向CPU提供参考地电平**
+     * **MN/MX**
+     * **组态选择，输入**
+     * **接高电平时，8086引脚工作在最小组态；反之，8086工作在最大组态**
+     * **TEST**
+     * **测试，输入、低电平有效**
+     * **TEST信号和WAIT指令配合使用，当CPU执行WAIT指令时，CPU处于等待状态，一旦检测到TEST信号为低，则结束等待状态，继续执行WAIT指令下面的指令**
+
+   * **引脚小结**
+
+     * **CPU引脚是系统总线的基本信号**
+     * **可以分成三类信号**
+     * **16位数据线：D0~D15**
+     * **20位地址线：A0~A19**
+     * **控制线：**
+       * **ALE、IO/M、WR、RD、READY**
+       * **INTR、INTA、NMI、HOLD、HLDA**
+       * **RESET、CLK、Vcc、GND**
+   
+5. **分时复用**
+
+   * **分时复用就是一个引脚在不同的时刻具有两个甚至多个作用**
+   * **最常见的总线复用是数据和地址引脚复用**
+   * **总线复用的目的是为了减少对外引脚个数**
+   * **8088/8086CPU 的数据地址线采用了总线复用方法**
+
+
+
+---
+
+## 8086、8088CPU的工作模式
+
+
+
+* **8086/8088的工作模式完全是由硬件决定的**
+* **为了尽可能适应各种使用场合，在设计8086/8088CPU芯片时，就使得他们可以在这两种工作模式下工作，即最大模式和最小模式**
+
+#### 最小模式
+
+**就是在系统中只有8086/8088一个微处理器。在这种系统中，所有的总线控制信号都直接由8086/8088产生，因此，系统中的总线控制逻辑电路被减到最小**
+
+#### 最大模式
+
+**最大模式是相对最小模式而言，它用在中等规模的或者大型的8086/8088系统中，在此系统中，包括两个或多个微处理器，其中一个主处理器就是8086/8088，其他的处理器称为协处理器。他们是协调主处理器工作的。和8086/8088配合的协处理器有两个，一个是数值运算协处理器8087，一个是输入/输出协处理器8089**
+
+* **8087**
+
+  **8087是一种专用于数值运算的处理器，它能实现多种类型的数值操作，例如高精度的整数和浮点运算，也可以进行超越函数（如：三角函数、对数函数）的计算**
+
+**在最大模式下，一般包括2个或多个处理器，这样就能解决主处理器和协处理器之间的协调工作问题和对总线的共享控制问题在最大模式下，CPU不直接产生总线控制信号，而是将总线开始的状态信息等信号经一个控制信号转移电路，即8288总线控制器**
+
+**另外，在最大模式下，一般还有中断优先控件，即8289A，在8086多处理器系统中，除8086CPU外还有8089和8087，他们也是采用分时方式来占用总线。因此，在多处理器系统中必须采用总线仲裁器8289配合总线控制器8288来确定每一个时刻的总线使用权赋予优先级别较高的的处理器使用**
+
+
+
+---
+
+## 总线BUS概念
+
+#### 总线定义
+
+**微机中各模块、各设备间传输信息的一组公用信号线**
+
+#### 总线标准
+
+**在总线连接和传输信息时应该遵循的协议和规范。包括：时钟、结构、电气、机械、协议、仲裁规范等**
+
+#### 三大总线
+
+* **地址线**
+* **数据线**
+* **控制线**
+
+![](img/QQ截图20200417235639.png)
