--- a/教程/微机原理.md
+++ b/教程/微机原理.md
@@ -526,3 +526,151 @@
 
 ### 1.8086/8088CPU的寄存器
 
+![](img/QQ截图20200419220037.png)
+
+
+
+#### 1) 通用寄存器
+
+**8086/8088CPU指令执行部件EU中有8个16位通用寄存器，他们可分成两组。一组由AX、BX、CX和DX构成，称作通用数据寄存器，可用来存放16位的数据或地址。也可把他们当作8个8位寄存器来使用，也就是把每个通用寄存器的高半部分和低半部分分开；低半部分被命名为AL、BL、CL和DL；高半部分被命名为AH、BH、CH和DH。8位寄存器只能存放数据而不能存放地址**
+
+1. **AX称为累加器**
+
+   **是算术运算时使用的主要寄存器，所有外部设备的输入输出指令只能使用AL或AX作为数据寄存器**
+
+2. **BX称为基址寄存器**
+
+   **它可以用作数据寄存器，在访问存储器时，可以存放被读写的存储单元的地址，是具有双重功能的寄存器**
+
+3. **CX称为计数寄存器**
+
+   **它可以用作数据寄存器，在字符串操作、循环操作和移位操作时用作计数器**
+
+4. **DX称为数据寄存器**
+
+   **它可以用作数据寄存，在乘、除法中作为辅助累加器，在输入输出操作中存放接口的地址**
+
+**指针和变址寄存器：4个16位寄存器，主要用来存放操作数的偏移地址（即造操作数的段内地址）**
+
+1. **SP称为堆栈指针寄存器**
+
+   **在堆栈操作中存放栈顶的偏移地址**
+
+2. **BP称为基址指针寄存器**
+
+   **常用作堆栈区的基地址寄存器**
+
+3. **SI称为源变址寄存器**
+
+   **主要用来存放地址，在字符串中存放源操作数的偏移地址。变址寄存器内存放的地址在数据传送完成后，具有自动修改的功能。例如，传送1字节数据后把地址加1，为下次传送做好准备，变址寄存器因此得名** 
+
+4. **DI称为目的变址寄存器**
+
+   **主要用于存放地址，在字符串操作中存放目的操作数的偏移地址**
+
+   
+
+#### 2) 段寄存器
+
+**8086/8088CPU总线接口部件BIU中设置有4个16位段寄存器，它们只是代码段寄存器CS，数据段寄存器DS，附加段寄存器ES和堆栈段寄存器SS**
+
+1. **CS代码段**
+
+   **代码段存放程序指令，程序代码超过64K时，需要分成几个段存放。CS中存放的是现在正在执行的程序段的段基址**
+
+2. **DS数据段**
+
+   **数据段用于存放当前使用的数据。需要第二个数据段时可以使用附加段**
+
+3. **SS堆栈段**
+
+   **堆栈段是内存中的一块存储区，用来存放专用数据。例如，调用子程序时的入口参数，返回地址等，这些数据都按照“先进后出”的规则进行存取。SS存放堆栈栈顶的偏移地址。数据进出堆栈要使用专门的堆栈操作指令，SP的值在执行堆栈操作指令时根据规则自动的进行修改**
+
+   ![](img/QQ截图20200419233415.png)
+
+4. **ES附加段**
+
+**编程时，程序和各种不同类型的数据分别存放在不同的逻辑段中，他们的“段基址”存放在“段寄存器”中，段内的偏移地址存放在指针寄存器或变址寄存器中**
+
+
+
+#### 3) 标志寄存器FLAGS
+
+**8086/8088CPU中设置了一个16位标志寄存器FLAGS，用来存放运算结果的特征和控制标志，其格式如下：**
+
+![](img/QQ截图20200419234650.png)
+
+**标志寄存器FLAGS中存放的9个标志位可分成两类，一类叫状态标志，用来表示运算结果的特征，包括CF、PF、AF、ZF、SF和OF；另一类叫控制标志，用来控制CPU的操作，包括IF、DF和TF。各标志位的作用说明如下**
+
+1. **CF（Carry Flag）进位标志位**
+
+   **CF=1，表示本次运算中最高位有进位（加法运算时）或有借位（减法运算时）**
+
+   **进行两个无符号数加法或减法运算后，如果CF=1，表示运算的结果超出了该字长能够表示的数据范围。例如，执行8位数据运算后，CF=1表示加法结果超过了255，或者是减法得到的差小于零**
+
+   **进行有符号数运算时，CF对运算结果没有直接意义**
+
+2. **PF（Parity Flag）奇偶标志位**
+
+   **PF=1，表示本次运算结果的低八位中有偶数个“1”；PF=0，表示有奇数“1”。PF可以用来进行奇偶效验，或者用来生成奇偶效验位**
+
+3. **AF（Auxiliary Carry Flag）辅助进位标志位**、
+
+   **AF=1，表示8位运算结果（限使用AL寄存器）中低四位向高四位有进位（加法运算时）或有借位（减法运算时），这个标志位旨在BCD数运算中起作用**
+
+4. **ZF（Zero Flag）零标志位**
+
+   **ZF=1，表示运算结果为0（各位全为0），否则ZF=0**
+   
+5. **SF（Sign Flag）符号标志位。SF=1，表示运算结果的最高位为”1“，否则SF=0**
+
+6. **OF（Overflow Flag）溢出标志位。OF=1表示两个用补码表示的有符号数的加法或减法结果超出了该字长所能表示的范围。例如，进行8位运算时，OF=1表示运算结果大于+127或小于-128，此时不能得到正确的运算结果。OF标志对无符号数的运算结果没有意义**
+
+   **溢出标志位是根据操作数的符号及其变化情况设置的。例如，加法运算时，两个操作数符号相同，而结果的符号与之相反，也就是判断最高位和次高位是否同时产生，则OF=1；否则OF=0**
+
+7. **IF（Interrupt Flag）中断允许标志位。IF=1，表示允许CPU响应可屏蔽中断。IF标志可通过STI指令置位（置1），也可通过CLI指令复位（清零）**
+
+8. **DF（Direction Flag）方向标志位。在串操作指令中，若DF=0，表示串操作指令执行后地址指针自动增量，串操作由低地址向高地址进行；DF=1，表示地址指针自动增量，串操作由高地址向低地址进行。DF标志可通过STD指令置位，也可通过CLD指令复位**
+
+9. **TF（Trap Flag）单步标志位。TF=1，控制CPU进入单步工作方式。在这种工作方式下，CPU每执行完一条指令就会自动产生一次内部中断，这在程序调试过程中很有用**
+
+
+
+### 1. 存储单元地址
+
+1. **定义：将存储单元编号，这个编号就是存储器地址**
+
+2. **表示：用十六进制来表达地址**
+
+3. **例如：1234H，其中大写H（小写h）表示是十六进制数**
+
+4. **在存储器中，每一个字节单元都有一个与之对应的、唯一的存储器地址，称为物理地址。对于16位字长的PC机（8086），由两个字节组成一个字（Word）。其位编号如下：**
+
+   ![](img/QQ截图20200423210443.png)
+
+### 2.存储单元内容
+
+1. **定义：存储单元中存放的信息称为该存储单元的内容**
+
+2. **表示：存储地址加”（）“**
+
+3. **如果用X表示某存储单元的地址，则X单元的内容可以表示为（X）**
+
+4. **假如X单元中存放着Y，而Y又是一个地址，则可用（Y） = （（X））来表示Y单元的内容**
+
+   ![](img/QQ截图20200423212109.png)
+
+   ![](img/QQ截图20200423212159.png)
+
+   ![](img/QQ截图20200423212558.png)
+
+### 存储器地址的分段
+
+#### 1. 分段原因及如何分段
+
+**原因：8086/8088CPU有20根地址总线A19A18...A1A0，可以访问存储器的最大容量为：${2^{20}B = 1024KB = 1MB}$**
+
+**在8086CPU中所有可用来存放地址的寄存器都是16位的。那么在16位字长的机器里，用什么办法来提供20位地址呢？**
+
+**
+
