--- a/教程/微机原理.md
+++ b/教程/微机原理.md
@@ -672,5 +672,74 @@
 
 **在8086CPU中所有可用来存放地址的寄存器都是16位的。那么在16位字长的机器里，用什么办法来提供20位地址呢？**
 
-**
+**解决办法：在IBM PC机里采用了存储器地址分段的方法。把1MB的存储空间划分成若干个段（Segment），每个段可由1~64KB（即65536B）个连续字节单元组成。每个段是一个可独立寻址的逻辑单元**
 
+**在程序设计中，需要设立几个段，每个段有多少个字节以及每个段的用途完全由用户自己确定。同时每个段中存储的代码或数据，可以存放在段内任意单元中**
+
+#### 2.分段的基本规则
+
+**在编制程序时，要把存储器划分成段，每个段最大可达64KB，这样段内地址可以用16位表示**
+
+**PC机对段的起始地址有限制，段不能起始于任意地址，而必须从任一小段的首地址开始**
+
+**机器规定：从0地址开始，每16个字节为一小段**
+
+![](img/QQ截图20200425121010.png)
+
+**在十六进制表示的地址中，最低位为0（即20位地址的低4位为0）**
+
+#### 3.段地址和偏移地址
+
+**段地址：表示一个段的开始**
+
+**偏移地址：在段内相对于段起始地址的偏移值。如当偏移量为‘0’时，就在这个段的起始单元，当偏移量为0FFFFH时，就是这个段（最大）最末一个字节单元**
+
+**CPU访问主存必须传送出物理地址，而用户编程则使用逻辑地址，每个存储单元都有两种形式的地址：物理地址和逻辑地址**
+
+**每一个存储单元的物理地址是唯一的，就是这个单元的地址编码**
+
+**在程序开发中，程序员使用的是逻辑地址，而不使用物理地址，这不仅有利于程序的开发，且对存储器的动态管理也是有利的。一个逻辑地址是由段地址和偏移地址两部分组成，而且都是无符号的16位二进制数**
+
+#### 4.物理地址的形成
+
+**计算公式：物理地址 = 段地址 X 10H + 偏移地址**
+
+![](img/QQ截图20200425121540.png)
+
+**表示范围：00000H~FFFFFH**
+
+**每个存储单元只有唯一的物理地址，但它却可以由不同的段地址和不同的偏移地址组成**
+
+![](img/QQ截图20200425141622.png)
+
+#### 5,段地址与段寄存器
+
+**实模式下，在8086~Pentinum微处理器中，代码段的段地址放在CS中；数据段的段地址放在DS中；堆栈段的段地址存放在SS中；附加段的段地址存放在ES中**
+
+**除非专门指定，如用户自行设定之外，在一般情况下，各段在存储器中的分配是由操作系统负责的。每个段可以独立地占用64KB存储区。各段也允许部分重叠或完全重叠**
+
+![](img/QQ截图20200425142041.png)
+
+#### 6.隐含段和偏移寄存器
+
+**8086~Pentium微处理器中，段寄存器和偏移寄存器组合有一定规则**
+
+![](img/QQ截图20200425142313.png)
+
+
+
+---
+
+## 总线操作与时序
+
+### 总线操作
+
+**总线操作是指CPU通过总线对外的各种操作**
+
+**8086的总线操作主要有：**
+
+* **存储器读、I\O读操作**
+* **存储器写、I\O写操作**
+* **中断响应操作**
+* **总线请求及响应操作**
+* **CPU正在进行内部操作、并不进行实际对外操作的空闲状态Ti**
